echo-with-health-check/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: echoserver-matthijs
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: echoserver
