echo-with-health-check/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver-matthijs
  annotations:
    kubernetes.io/ingressClassName: traefik
spec:
  rules:
    - http:
        paths:
          - path: /matthijs
            pathType: Prefix
            backend:
              service:
                name: echoserver
                port:
                  number: 80
